# HarmonyLink

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.cargo/: config
.github/workflows/: cmake-multi-platform.yml  release.yml  rust-build.yml
HarmonyLinkLib/: CMakeLists.txt
HarmonyLinkLib/include/: Core.h  FString.h  HarmonyLinkLib.h  HarmonyLinkStruct.h  Version.h  Version.h.in
HarmonyLinkLib/include/Enums/: EDevice.h  EPlatform.h
HarmonyLinkLib/include/Structs/: FBattery.h  FCPUInfo.h  FDevice.h  FOSVerInfo.h
HarmonyLinkLib/src/: HarmonyLinkLib.cpp  Version.cpp  dllmain.cpp
HarmonyLinkLib/src/Platform/: IPlatformUtilities.cpp  IPlatformUtilities.h  WineUtilities.cpp  WineUtilities.h
HarmonyLinkLib/src/Platform/Unix/: UnixUtilities.cpp  UnixUtilities.h
HarmonyLinkLib/src/Platform/Unix/Linux/: LinuxUtilities.cpp  LinuxUtilities.h
HarmonyLinkLib/src/Platform/Unix/Mac/: MacUtilities.cpp  MacUtilities.h
HarmonyLinkLib/src/Platform/Windows/: WindowsUtilities.cpp  WindowsUtilities.h
HarmonyLinkTest/: CMakeLists.txt
HarmonyLinkTest/src/: main.cpp
Resources/: dock_models.json
src/: main.rs
src/api/: all_info.rs  api.rs  endpoints.rs  endpoints_v1.rs  mod.rs  server.rs  structs.rs
src/battery/: stats.rs  structs.rs
src/docking/: stats.rs  structs.rs
src/os/: structs.rs
src/v1/: mod.rs
src/v1/all_info/: stats.rs  structs.rs
src/v1/battery/: mod.rs  stats.rs  structs.rs
src/v1/docking/: stats.rs  structs.rs
src/v1/os/: stats.rs  structs.rs
src/version/: info.rs
